Icones Concluídos, Routes em Andamento - 04-05-2023

--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
     <div class="teste">
 
     </div>
-    <Main>
+    <main id="root">
 
-    </Main>
+        <div class="titulo__campeoes">
+            <img class="right__accessory" src="./img/rightAccessory.png" alt="">
+            <h1>CAMPEÕES</h1>
+            <img class="left__accessory" src="./img/leftAccessory.png" alt="">
+        </div>
+
+        <div class="container" id="container">
+            
+        </div>
+      
+    </main>
     <footer-default>
 
     </footer-default>
