--- a/pages/champion.html
+++ b/pages/champion.html
@@ -1,5 +1,6 @@
-<script src="../js/campeoes.js" type="module" defer></script>
 
+<script src="../js/campeoes.js" type="module" defer></script>
+<link rel="stylesheet" href="../css/campeao.css">
 <body>
     <div id="champion">
     
