Telas Finalizadas - Falta Responsividade

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,17 @@
-<div id="home">
+<link rel="stylesheet" href="../css/home.css">
 
-</div>
+<body>
+    <main>
+        <img src="./img/wallpaper.webp" alt="wallpaper lol" class="wallpaper__fundo">
+
+        <div class="titulo__campeoes">
+            <img class="right__accessory" src="./img/rightAccessory.png" alt="">
+            <h1>CAMPEÕES</h1>
+            <img class="left__accessory" src="./img/leftAccessory.png" alt="">
+        </div>
+
+        <div class="home" id="home">
+
+        </div>
+    </main>
+</body>
