--- a/pages/classes.html
+++ b/pages/classes.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../css/classes.css">
 <script src="../js/classes.js" type="module" defer></script>
 
 <div id="classes">
